--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 <body
 
 <audio id="bgMusic" autoplay loop>
-    <source src="ost.mp3" type="audio/mpeg">
+     <source src="https://github.com/aprelryu21/thirdia-chronicles-games/blob/main/ost.mp3?raw=true" type="audio/mpeg">
 </audio>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
@@ -4525,3 +4525,4 @@ function skipTutorial(){
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96f5266d23978104',t:'MTc1NTIyMzc2OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
