--- a/index.html
+++ b/index.html
@@ -307,8 +307,14 @@
 </audio>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-    var music = document.getElementById('bgMusic');
+    const music = document.getElementById('bgMusic');
     music.volume = 0.5;
+
+    // Unmute saat user pertama kali klik di halaman
+    document.body.addEventListener('click', function() {
+        music.muted = false;
+        music.play();
+    }, { once: true });
 });
 </script>
  class="min-h-screen text-white">
@@ -4525,4 +4531,5 @@ function skipTutorial(){
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96f5266d23978104',t:'MTc1NTIyMzc2OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
