--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                         BATAL
                     </button>
                 </div>
-                <p class="text-xs text-gray-500 mt-4">Hint: Nama kerajaan + tahun ajaran (contoh: thirdia2024)</p>
+                <p class="text-xs text-gray-500 mt-4">Masukan Kode Akses Admin Kesini</p>
             </div>
         </div>
 
@@ -4152,11 +4152,8 @@
         function checkAdminCode() {
             const code = document.getElementById('adminCode').value.toLowerCase();
             const validCodes = [
-                'thirdia2024',
-                'thirdia2025', 
                 'admin123',
-                'guru2024',
-                'teacher2024'
+                'aprelryu',
             ];
             
             if (validCodes.includes(code)) {
@@ -4688,3 +4685,4 @@ function drawPlatforms(platforms) {
 
 
 </html>
+
